futbot-v3/test-robot/pan=%d
  File "<string>", line 4
    print(PAN_CENTER=%d TILT_CENTER=%d % (PAN_CENTER, TILT_CENTER))
                     ^
SyntaxError: invalid syntax
